# WorkFlow

./: .gitignore  CLAUDE.md  Makefile  README.md  biblatex-entries.ods  myPRISMA.md  pyproject.toml  request.md
.claude/: settings.local.json
.claude/requests/: 2026-04-22-wiki-single-vault-refactor.md  2026-05-21-resuming.md
.github/workflows/: nvim-plugin.yml  pages.yml  python-package.yml
data/: 00-PhysicsCodes.csv  01-PhilosophyCodes.csv  02-InformaticsCodes.csv  03-TeachingCodes.csv  04-LinguisticsCodes.csv  05-HealthSciencesCodes.csv  06-PracticalEngineeringCodes.csv  07-MusicCodes.csv  08-VisualArtsCodes.csv  09-AgronomyCodes.csv  books.json  course-schema.json
data/templates/: audit-template.md  concept-skyfolding-template.yml  course-schema-template.json  fleeting-monolith-template.md  plan-template.md  raw-gap-log.md  request-template.md  security-template.md
docs/: WorkFlow.md  _config.yml  index.html  index.md  search.js  temp.md  workflow.html
docs/ADR/: 0000-TEMPLATE.md  0001-Zettelkasten-system.md  0002-Unified-knowledge.md  0003-hybrid-database.md  0004-sqlalchemy-single-orm.md  0005-exercise-dsl-extends-macros.md  0006-tikz-asset-pipeline.md  0007-shared-db-module.md  0008-xdg-directory-layout.md  0009-exercise-module-boundary.md  0010-exercise-persistence-model.md  0011-latex-exercise-parser-strategy.md  0012-moodle-xml-export-mapping.md  0013-codebase-consolidation.md  0014-zettelkasten-implementation.md  0015-zettelkasten-dailly-work.md  0016-evaluation-cli.md  0017-graph-neighbors-json-contract.md  0018-bulk-import-contract.md  0019-bibliography-dialect-biblatex-bibtex.md  0020-bibliography-module-boundary.md  0021-vault-full-text-search.md  0022-research-question-entity.md  INDEX.md  ITEP-0000-project-structure.md  ITEP-0001-sqlalchemy-persistence.md  ITEP-0002-four-layer-schema.md  ITEP-0003-config-yaml-as-db-pointer.md  ITEP-0004-two-project-types.md  ITEP-0005-symlink-based-config.md  ITEP-0006-taxonomy-enums.md  ITEP-0007-crud-manager-layer.md  ITEP-0008-general-project-nomenclature.md  ITEP-0009-knowledge-lifecycle-and-ai-agents.md  ITEP-0010-schema-versioning-and-migrations.md  ITEP-0011-vault-unification.md  ITEP-0012-concept-orm.md  ITEP-0013-note-relation-graph.md  (+28 more)
nvim-plugin/: ARCHITECTURE.md
pytest-of-luis/: pytest-current
scripts/: crear_lecture.sh  patch_docs_frontmatter.py  smoke_taxonomy.sh
src/: main.py
tasks/: 2026-06-03-template-yaml-audit.md  ITEP-0012-plan.md  LZK-0004-plan.md  WIKI-UPDATE-BRIEF.md  adr-0001-notes-sync-plan.md  biblatex-compliance-report.md  biblatex-fields-catalog.md  biblatex.tex  itep-0011-vault-unification-plan.md  itep-0012-concept-orm-plan.md  lessons.md  phase4c-test-review.md  phase5-test-review.md  phase6-test-review.md  phase7-test-review.md  phaseA-notes-crud-plan.md  phaseB-main-topic-fk-plan.md  route-map-post-itep-0011.md  todo.md
tests/: conftest.py  test_database.py  test_defaults.py  test_manager.py
(+2323 files in other folders)
