[project]
name = "workflow"
version = "1.0.0001"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Luis Fernando Umaña Castro", email = "luis.umanacastro@ucr.ac.cr" },
]
classifiers = ["Development Status :: 2 - Pre-Alpha"]
dependencies = ["appdirs", "bibtexparser", "click", "pyyaml"]

[project.scripts]
bib2yaml = "prismar.bib2yaml:cli"
cleta = "lectkit.cleta:cli"
crete = "lectkit.crete:cli"
mergebib = "prismar.mergebib:cli"
nofi = "prismar.nofi:cli"
nori = "prismar.nori:cli"
prisma-import-bib = "prismar.prismaimportbib:cli"
prisma-review = "prismar.prismareview:cli"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"
